remove_edges/log.txt
g++ -std=c++11 -g -c re.cpp
re.cpp: In member function ‘void RE::remove(int)’:
re.cpp:73:34: error: request for member ‘from’ in ‘((RE*)this)->RE::cells.std::vector<_Tp, _Alloc>::operator[]<RE::Cell*, std::allocator<RE::Cell*> >(((std::vector<RE::Cell*>::size_type)i))’, which is of pointer type ‘__gnu_cxx::__alloc_traits<std::allocator<RE::Cell*> >::value_type {aka RE::Cell*}’ (maybe you meant to use ‘->’ ?)
             pair->first=cells[i].from;
                                  ^
makefile:13: recipe for target 're.o' failed
make: *** [re.o] Error 1
